# Quran-mobile

./: .gitignore  .graphifyignore  README.md  babel.config.js  ffmpeg-binary-req.md  index.html  index.js  metro.config.js  package-lock.json  package.json  reciter_check_results.md  reciter_word_timing_report.md  reciter_word_timing_report_full.md  tsconfig.json  vite.config.ts
.agent/rules/: specify-rules.md
.github/workflows/: android.yml  generate-keystore.yml
.specify/memory/: constitution.md
android/: build.gradle  settings.gradle
android/app/: build.gradle
ios/: Podfile
ios/QuranShorts/: LaunchScreen.storyboard
mobile/: app.json  package-lock.json  package.json  tsconfig.json
mobile/android/: local.properties
mobile/src/: App.tsx  theme.ts
specs/001-refactor-mobile-app/: plan.md  spec.md  tasks.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/tauri-plugin-ffmpeg/: Cargo.toml  build.rs
src-tauri/tauri-plugin-ffmpeg/android/: CMakeLists.txt  build.gradle.kts  proguard-rules.pro
src-tauri/tauri-plugin-ffmpeg/android/src/main/cpp/: hidapi_stub.c
src-tauri/tauri-plugin-ffmpeg/android/src/main/java/com/plugin/ffmpeg/: FfmpegPlugin.kt
src/api/: pexels-client.ts  quran-api.ts
src/components/: ApiKeyModal.css  ApiKeyModal.tsx  ApiKeySettings.css  ApiKeySettings.tsx  AspectRatioPicker.css  (+18 more)
tauri/: .gitignore  index.html  package-lock.json
website/: download.html  index.html  script.js  styles.css
(+147 files in other folders)
